Ensure 'Older' navigation is visible on small screens

--- a/css/munich.css
+++ b/css/munich.css
@@ -327,7 +327,7 @@ li.even {
     z-index: 2;
     float:left;
     text-align:left;
-    left:0px;
+    left: 10px;
 
     border: none;
     border-radius: 5px 5px 5px 5px;
